# ELiPS

./: .editorconfig  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  ToDo.txt  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
experiment/: X_76_hamming4_plus.csv  get_func_list.py  name.txt  x_search.c
include/ELiPS/: Define.h  EFp.h  EFp12.h  EFp2.h  EFp6.h  Fp.h  Fp12.h  Fp2.h  Fp6.h  G1_SCM.h  G2_SCM.h  G3_exp.h  JSF.h  Jacobian_test.h  bls.h  bls12.h  bls12_final_exp.h  bls12_g1_scm.h  bls12_g2_scm.h  bls12_g3_exp.h  bls12_generate_curve.h  bls12_generate_parameter.h  bls12_init.h  bls12_miller.h  bls12_pairing.h  bls12_sym.h  bls12_test.h  bls_final_exp.h  bls_g1.h  bls_g2.h  bls_generate.h  bls_line_calculate.h  bls_miller.h  bls_pairing.h  bls_twist.h  bn12.h  bn12_final_exp.h  bn12_g1_scm.h  bn12_g2_scm.h  bn12_g3_exp.h  (+39 more)
option/hash/: README.md  elips_sha512.h  hash_test.c
src/: Define.c  Define.lo  EFp.c  EFp.lo  EFp12.c  EFp12.lo  EFp2.c  EFp2.lo  EFp6.c  EFp6.lo  Fp.c  Fp.lo  Fp12.c  Fp12.lo  Fp2.c  Fp2.lo  Fp6.c  Fp6.lo  G1_SCM.c  G1_SCM.lo  G2_SCM.c  G2_SCM.lo  G3_exp.c  G3_exp.lo  JSF.c  JSF.lo  Jacobian_test.c  Jacobian_test.lo  Makefile  Makefile.am  Makefile.in  bls12_final_exp.c  bls12_final_exp.lo  bls12_generate_curve.c  bls12_generate_curve.lo  bls12_generate_parameter.c  bls12_generate_parameter.lo  bls12_init.c  bls12_init.lo  bls12_miller.c  (+73 more)
src/.deps/: Define.Plo  EFp.Plo  EFp12.Plo  EFp2.Plo  EFp6.Plo  Fp.Plo  Fp12.Plo  Fp2.Plo  Fp6.Plo  G1_SCM.Plo  G2_SCM.Plo  G3_exp.Plo  JSF.Plo  Jacobian_test.Plo  bls12_final_exp.Plo  bls12_generate_curve.Plo  bls12_generate_parameter.Plo  bls12_init.Plo  bls12_miller.Plo  bls12_pairing.Plo  bls12_test.Plo  bn12_final_exp.Plo  bn12_generate_curve.Plo  bn12_generate_parameter.Plo  bn12_init.Plo  bn12_miller.Plo  bn12_pairing.Plo  bn12_test.Plo  fast_test.Plo  field_test.Plo  jsf_naf.Plo  lazy_test.Plo  line_calculate.Plo  mpn.Plo  scalar.Plo  sparse.Plo  test.Plo  time.Plo  twist.Plo
src/.libs/: libelips.0.dylib  libelips.dylib  libelips.la  libelips.lai  libelips.so.0.0.0  libpairing.la  libpairing.lai  libpairing.so.0.0.0
src/bls/: Makefile.am  bls_final_exp.c  bls_g1.c  bls_g2.c  bls_generate.c  bls_line_calculate.c  bls_miller.c  bls_pairing.c  bls_twist.c
src/bls12/: Makefile  Makefile.am  Makefile.in  bls12_final_exp.c  bls12_final_exp.lo  bls12_g1_scm.c  bls12_g1_scm.lo  bls12_g2_scm.c  bls12_g2_scm.lo  bls12_g3_exp.c  bls12_g3_exp.lo  bls12_generate_curve.c  bls12_generate_curve.lo  bls12_generate_parameter.c  bls12_generate_parameter.lo  bls12_init.c  bls12_init.lo  bls12_miller.c  bls12_miller.lo  bls12_pairing.c  bls12_sym.c  bls12_test.c  libelipsbls12.la
src/bls12/.deps/: bls12_final_exp.Plo  bls12_g1_scm.Plo  bls12_g2_scm.Plo  bls12_g3_exp.Plo  bls12_generate_curve.Plo  bls12_generate_parameter.Plo  bls12_init.Plo  bls12_miller.Plo  bls12_pairing.Plo  bls12_test.Plo  time.Plo
src/bls12/.libs/: libelipsbls12.la
src/bn12/: Makefile  Makefile.am  Makefile.in  bn12_final_exp.c  bn12_final_exp.lo  bn12_g1_scm.c  bn12_g1_scm.lo  bn12_g2_scm.c  bn12_g2_scm.lo  bn12_g3_exp.c  bn12_g3_exp.lo  bn12_generate_curve.c  bn12_generate_curve.lo  bn12_generate_parameter.c  bn12_generate_parameter.lo  bn12_init.c  bn12_miller.c  bn12_pairing.c  bn12_test.c  libelipsbn12.la
src/bn12/.deps/: bn12_final_exp.Plo  bn12_g1_scm.Plo  bn12_g2_scm.Plo  bn12_g3_exp.Plo  bn12_generate_curve.Plo  bn12_generate_parameter.Plo  bn12_init.Plo  bn12_miller.Plo  bn12_pairing.Plo  bn12_test.Plo
src/bn12/.libs/: libelipsbn12.la
test/: a.out  bench.c  example.c  example_bls12.c  example_bn12.c  file_test.c  fp_bench.c  frtest.c  g1_cmp_s_bit.c  glv.c  kawabe.c  main.c  mpn_to_str.c  result.txt  result_time_shift.txt  shifttest.c  test.c  test2.c  test_bls.c  test_finalexp_cvma.c  test_fp4.c  test_fpcv.c  test_fpm.c  test_inf.c  test_matrix.c  time_test.c
test/bench/: affine.c  bench.h  g1_gen_test.c  sqrttest.c
test/kanenari/: pairing_precompute.h  pairing_precompute_example.c
test/takahashi/: result_g1_test.txt  result_g3_test.txt  test.sh  test_g1_scm  test_g1_scm.c  test_g1_scm.h  test_g2_scm  test_g2_scm.c  test_g2_scm.h  test_g3_exp  test_g3_exp.c  test_g3_exp.h
test/takahashi/jsf/: jsf=test_g1_scm.h
test/takahashi/naf/: test_g1_scm.c  test_g1_scm.h  test_g2_scm.c  test_g2_scm.h  test_g3_exp.c  test_g3_exp.h
