
SUBDIRS = src

AM_CPPFLAGS = -I../include

library_includedir = $(includedir)/ELiPS
library_include_HEADERS = include/ELiPS/Define.h\
include/ELiPS/bn12_init.h\
include/ELiPS/bn12_generate_curve.h\
include/ELiPS/bn12_generate_parameter.h\
include/ELiPS/bls12_init.h\
include/ELiPS/bls12_generate_curve.h\
include/ELiPS/bls12_generate_parameter.h\
include/ELiPS/mpn.h\
include/ELiPS/Fp.h\
include/ELiPS/Fp2.h\
include/ELiPS/Fp6.h\
include/ELiPS/Fp12.h\
include/ELiPS/EFp.h\
include/ELiPS/EFp2.h\
include/ELiPS/EFp6.h\
include/ELiPS/EFp12.h\
include/ELiPS/twist.h\
include/ELiPS/sparse.h\
include/ELiPS/JSF.h\
include/ELiPS/bn12_miller.h\
include/ELiPS/bn12_final_exp.h\
include/ELiPS/bn12_pairing.h\
include/ELiPS/bls12_miller.h\
include/ELiPS/bls12_final_exp.h\
include/ELiPS/bls12_pairing.h\
include/ELiPS/G1_SCM.h\
include/ELiPS/G2_SCM.h\
include/ELiPS/G3_exp.h\
include/ELiPS/time.h\
include/ELiPS/test.h\
include/ELiPS/bn12_test.h\
include/ELiPS/bls12_test.h\
include/ELiPS/bn12.h\
include/ELiPS/bls12.h
