
SUBDIRS = src
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -I../include

library_includedir = $(includedir)/ELiPS

library_include_HEADERS = include/ELiPS/define.h\
include/ELiPS/scalar.h\
include/ELiPS/bn12_init.h\
include/ELiPS/bn12_generate_curve.h\
include/ELiPS/bn12_generate_parameter.h\
include/ELiPS/bls12_init.h\
include/ELiPS/bls12_generate_curve.h\
include/ELiPS/bls12_generate_parameter.h\
include/ELiPS/mpn.h\
include/ELiPS/fp.h\
include/ELiPS/fp2.h\
include/ELiPS/fp6.h\
include/ELiPS/fp12.h\
include/ELiPS/efp.h\
include/ELiPS/efp2.h\
include/ELiPS/efp6.h\
include/ELiPS/efp12.h\
include/ELiPS/twist.h\
include/ELiPS/line_calculate.h\
include/ELiPS/jsf_naf.h\
include/ELiPS/bn12_miller.h\
include/ELiPS/bn12_final_exp.h\
include/ELiPS/bn12_pairing.h\
include/ELiPS/bls12_miller.h\
include/ELiPS/bls12_final_exp.h\
include/ELiPS/bls12_pairing.h\
include/ELiPS/bn12_g1_scm.h\
include/ELiPS/bn12_g2_scm.h\
include/ELiPS/bn12_g3_exp.h\
include/ELiPS/bls12_g1_scm.h\
include/ELiPS/bls12_g2_scm.h\
include/ELiPS/bls12_g3_exp.h\
include/ELiPS/time.h\
include/ELiPS/test.h\
include/ELiPS/field_test.h\
include/ELiPS/bn12_test.h\
include/ELiPS/bls12_test.h\
include/ELiPS/bn12.h\
include/ELiPS/bls12.h
