
SUBDIRS = src
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -I../include

library_includedir = $(includedir)/ELiPS

library_include_HEADERS = include/ELiPS/define.h\
include/ELiPS/define_cvma.h\
include/ELiPS/scalar.h\
include/ELiPS/bls12_init.h\
include/ELiPS/bls12_generate_curve.h\
include/ELiPS/bls12_generate_parameter.h\
include/ELiPS/mpn.h\
include/ELiPS/fp.h\
include/ELiPS/fp2.h\
include/ELiPS/fp2cv.h\
include/ELiPS/fp4cv.h\
include/ELiPS/fp6.h\
include/ELiPS/fp12.h\
include/ELiPS/fp12cv.h\
include/ELiPS/fpm.h\
include/ELiPS/fpm2.h\
include/ELiPS/matrix.h\
include/ELiPS/efp.h\
include/ELiPS/efp2.h\
include/ELiPS/efp2cv.h\
include/ELiPS/efp6.h\
include/ELiPS/efp12.h\
include/ELiPS/efpm.h\
include/ELiPS/efpm2.h\
include/ELiPS/twist.h\
include/ELiPS/line_calculate.h\
include/ELiPS/jsf_naf.h\
include/ELiPS/bls12_miller.h\
include/ELiPS/bls12_final_exp.h\
include/ELiPS/bls12_pairing.h\
include/ELiPS/bls12_sym.h\
include/ELiPS/bls12_g1_scm.h\
include/ELiPS/bls12_g2_scm.h\
include/ELiPS/bls12_g3_exp.h\
include/ELiPS/time.h\
include/ELiPS/test.h\
include/ELiPS/field_test.h\
include/ELiPS/bls12_test.h\
include/ELiPS/bls_final_exp.h\
include/ELiPS/bls_g1.h\
include/ELiPS/bls_g2.h\
include/ELiPS/bls_generate.h\
include/ELiPS/bls_line_calculate.h\
include/ELiPS/bls_miller.h\
include/ELiPS/bls_pairing.h\
include/ELiPS/bls_twist.h\
include/ELiPS/bls.h\
include/ELiPS/bls12.h\
include/ELiPS/fr.h\
include/ELiPS/file.h
