
lib_LTLIBRARIES = libelips.la

AM_CPPFLAGS = -I../include

libelips_la_SOURCES = Define.c\
bn12_generate_curve.c\
bn12_generate_parameter.c\
bn12_init.c\
bls12_generate_curve.c\
bls12_generate_parameter.c\
bls12_init.c\
mpn.c\
Fp.c\
Fp2.c\
Fp6.c\
Fp12.c\
EFp.c\
EFp2.c\
EFp6.c\
EFp12.c\
twist.c\
sparse.c\
JSF.c\
bn12_miller.c\
bn12_final_exp.c\
bn12_pairing.c\
bls12_miller.c\
bls12_final_exp.c\
bls12_pairing.c\
G1_SCM.c\
G2_SCM.c\
G3_exp.c\
test.c\
time.c\
bn12_test.c\
bls12_test.c\
../include/ELiPS/Define.h\
../include/ELiPS/bn12_generate_curve.h\
../include/ELiPS/bn12_generate_parameter.h\
../include/ELiPS/bn12_init.h\
../include/ELiPS/bls12_generate_curve.h\
../include/ELiPS/bls12_generate_parameter.h\
../include/ELiPS/bls12_init.h\
../include/ELiPS/mpn.h\
../include/ELiPS/Fp.h\
../include/ELiPS/Fp2.h\
../include/ELiPS/Fp6.h\
../include/ELiPS/Fp12.h\
../include/ELiPS/EFp.h\
../include/ELiPS/EFp2.h\
../include/ELiPS/EFp6.h\
../include/ELiPS/EFp12.h\
../include/ELiPS/twist.h\
../include/ELiPS/sparse.h\
../include/ELiPS/JSF.h\
../include/ELiPS/bn12_miller.h\
../include/ELiPS/bn12_final_exp.h\
../include/ELiPS/bn12_pairing.h\
../include/ELiPS/bls12_miller.h\
../include/ELiPS/bls12_final_exp.h\
../include/ELiPS/bls12_pairing.h\
../include/ELiPS/G1_SCM.h\
../include/ELiPS/G2_SCM.h\
../include/ELiPS/G3_exp.h\
../include/ELiPS/time.h\
../include/ELiPS/test.h\
../include/ELiPS/bn12_test.h\
../include/ELiPS/bls12_test.h\
../include/ELiPS/bn12.h\
../include/ELiPS/bls12.h
