noinst_LTLIBRARIES = libelipsbls.la
AM_CPPFLAGS = -I../../include

libelipsbls_la_SOURCES = bls_final_exp.c\
bls_g1.c\
bls_g2.c\
bls_generate.c\
bls_line_calculate.c\
bls_miller.c\
bls_pairing.c\
../../include/ELiPS/bls_final_exp.h\
../../include/ELiPS/bls_g1.h\
../../include/ELiPS/bls_g2.h\
../../include/ELiPS/bls_generate.h\
../../include/ELiPS/bls_line_calculate.h\
../../include/ELiPS/bls_miller.h\
../../include/ELiPS/bls_pairing.h