noinst_LTLIBRARIES = libelipsbls12.la
AM_CPPFLAGS = -I../../include

libelipsbls12_la_SOURCES = bls12_generate_curve.c\
bls12_generate_parameter.c\
bls12_init.c\
bls12_g1_scm.c\
bls12_g2_scm.c\
bls12_g3_exp.c\
bls12_miller.c\
bls12_final_exp.c\
bls12_pairing.c\
bls12_sym.c\
bls12_test.c\
../../include/ELiPS/bls12_generate_curve.h\
../../include/ELiPS/bls12_generate_parameter.h\
../../include/ELiPS/bls12_init.h\
../../include/ELiPS/bls12_g1_scm.h\
../../include/ELiPS/bls12_g2_scm.h\
../../include/ELiPS/bls12_g3_exp.h\
../../include/ELiPS/bls12_miller.h\
../../include/ELiPS/bls12_final_exp.h\
../../include/ELiPS/bls12_pairing.h\
../../include/ELiPS/bls12_sym.h\
../../include/ELiPS/bls12_test.h