noinst_LTLIBRARIES = libelipsbn12.la
AM_CPPFLAGS = -I../../include

libelipsbn12_la_SOURCES = bn12_generate_curve.c\
bn12_generate_parameter.c\
bn12_init.c\
bn12_g1_scm.c\
bn12_g2_scm.c\
bn12_g3_exp.c\
bn12_miller.c\
bn12_final_exp.c\
bn12_pairing.c\
bn12_test.c\
../../include/ELiPS/bn12_generate_curve.h\
../../include/ELiPS/bn12_generate_parameter.h\
../../include/ELiPS/bn12_init.h\
../../include/ELiPS/bn12_g1_scm.h\
../../include/ELiPS/bn12_g2_scm.h\
../../include/ELiPS/bn12_g3_exp.h\
../../include/ELiPS/bn12_miller.h\
../../include/ELiPS/bn12_final_exp.h\
../../include/ELiPS/bn12_pairing.h\
../../include/ELiPS/bn12_test.h